tests/ui/consts/issue-112824-type-mismatch-type-error.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/issue-112824-type-mismatch-type-error.rs:3:21
   |
LL | pub struct Opcode2(&'a S);
   |                   - ^^ undeclared lifetime
   |                   |
   |                   help: consider introducing lifetime `'a` here: `<'a>`

error[E0412]: cannot find type `S` in this scope
  --> $DIR/issue-112824-type-mismatch-type-error.rs:3:24
   |
LL | pub struct Opcode2(&'a S);
   |                        ^ not found in this scope
   |
help: you might be missing a type parameter
   |
LL | pub struct Opcode2<S>(&'a S);
   |                   +++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0261, E0412.
For more information about an error, try `rustc --explain E0261`.
